Implementa producto y categoria completos con DTOs, endpoints REST y manejo de excepciones